--- a/Day1/index.html
+++ b/Day1/index.html
@@ -15,6 +15,10 @@
     <!-- <h7>This is a heading tag.</h7> There is no h7 tag. It mimics the "p" tag. -->
     <p>This is a paragraph tag.</p>
     <a href="https://www.google.com/" target="_blank">Go to Google</a> <!-- The correct way to write is "_blank" and not "blank". Default is "_self". "_self", "_top" etc. were used with frames which is obsolete now. -->
+    <br>
+    <br>
+    <br>
+    <p><a href="https://google.com/" target="_blank">This paragraph will take you to Google search engine.</a></p>
 </body>
 </html>
 
