--- a/Day1/index.html
+++ b/Day1/index.html
@@ -19,6 +19,10 @@
     <br>
     <br>
     <p><a href="https://google.com/" target="_blank">This paragraph will take you to Google search engine.</a></p>
+    <br>
+    <br>
+    <br>
+    <input type="password" placeholder="This is a text input field." maxlength="2"> <!-- This is a text input field. It is a self closing tag. -->
 </body>
 </html>
 
