--- a/Day1/index.html
+++ b/Day1/index.html
@@ -23,6 +23,18 @@
     <br>
     <br>
     <input type="password" placeholder="This is a text input field." maxlength="2"> <!-- This is a text input field. It is a self closing tag. -->
+    <br>
+    <br>
+    <br>
+    <ol type="I">
+        <li>Name</li>
+        <li>Class</li>
+        <li>Section</li>
+    </ol>
+    <ul type="circle">
+        <li>Name</li>
+        <li>Class</li>
+        <li>Section</li>
 </body>
 </html>
 
