label for input added, for, id, name

--- a/Day1/index.html
+++ b/Day1/index.html
@@ -22,7 +22,8 @@
     <br>
     <br>
     <br>
-    <input type="password" placeholder="This is a text input field." maxlength="2"> <!-- This is a text input field. It is a self closing tag. -->
+    <label for="input1">Password</label>
+    <input type="password" placeholder="This is a text input field." maxlength="2" id="input1" name="input1"> <!-- This is a text input field. It is a self closing tag. -->
     <br>
     <br>
     <br>
