font size, text-align

--- a/Day2/index.html
+++ b/Day2/index.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day2</title>
 </head>
+
 <body>
     <h1 style="color: yellowgreen;">This is a heading.</h1>
     <h2 style="color: rgb(60,10,200);  background-color: burlywood;">This is a heading.</h2>
     <h3 style="color: #ff5733;">This is a heading.</h3>
-
+    <br>
+    <br>
+    <br>
+    <p style="font-size: 20px;">This is a paragraph.</p>
+    <p style="font-size: xx-large;">This is a paragraph.</p>
+    <br>
+    <br>
+    <br>
+    <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam asperiores dolores adipisci rerum aliquam sed
+        officia explicabo eum, atque exercitationem. Commodi, minima magnam iste libero quidem similique voluptas
+        temporibus consectetur id veniam nobis nostrum sequi at saepe incidunt ut sit veritatis culpa molestiae rerum
+        adipisci qui quaerat quam aspernatur. Unde ad tenetur alias earum veritatis aspernatur maiores, possimus
+        voluptatibus adipisci cum, nostrum saepe, blanditiis ea maxime sunt voluptatum fugit similique. Nemo quidem
+        consectetur eaque nihil accusantium suscipit quas sit aperiam rem at iusto maxime, quisquam molestias quam.
+        Dicta nulla maxime cum. Consequatur illo reiciendis cupiditate quidem aliquam, cumque inventore tempore non
+        voluptatem eum aliquid molestiae beatae aut tenetur quisquam blanditiis facilis voluptatum! Ratione eveniet,
+        soluta repellendus doloribus ipsam tempora quam incidunt repellat harum quia. Culpa, esse. Suscipit hic ipsum
+        laudantium placeat error delectus animi et repellat at eligendi, cupiditate incidunt odio accusamus debitis
+        optio rerum quibusdam voluptas laboriosam. Hic, laudantium est! Culpa numquam, sint, vitae eos at earum est iste
+        animi dolorum reprehenderit laudantium dolores unde non saepe voluptate molestias, tenetur cum accusamus
+        voluptates inventore eum adipisci officiis a. Ad amet voluptatum, vero excepturi sed omnis error dolores
+        recusandae aliquam ullam. Quam aliquam id ullam repellendus in, laudantium facilis asperiores!</p>
+    <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, nam ratione explicabo, soluta consequuntur
+        repellat illo reprehenderit dolore atque veniam voluptatem ipsam est a, tempora vero quis! Ipsam perspiciatis
+        expedita veritatis minus excepturi facere numquam eligendi officia, facilis possimus aperiam. Cumque alias
+        voluptatum, modi consectetur id aliquam quae beatae tenetur quidem autem veniam? Beatae asperiores expedita odio
+        et ratione eos, alias, id neque tempora consequuntur assumenda similique soluta praesentium maiores dolores
+        obcaecati! Nam deserunt inventore voluptatibus. Dolorem assumenda numquam magni maxime corrupti dolore,
+        molestias laborum amet eaque corporis praesentium laboriosam voluptates alias, veritatis earum harum quaerat
+        temporibus cupiditate necessitatibus. Commodi eaque laborum cum ea ut nobis aliquam nemo! Porro at eos odio aut,
+        qui voluptates. Similique fugiat beatae eos accusantium voluptatum recusandae esse aliquid earum explicabo natus
+        debitis expedita vitae illum dolores consequatur cum, perspiciatis minus incidunt quidem? Vitae explicabo dicta
+        rerum blanditiis, temporibus laboriosam dolorem quae ad obcaecati, quam voluptatibus amet veritatis nobis
+        reprehenderit veniam ea placeat nisi? Eius consequuntur vel laudantium officiis temporibus consequatur nulla
+        recusandae pariatur, est eum iure consectetur ducimus, sed fuga facilis, sequi ipsa perspiciatis. Distinctio
+        corrupti quod error ad assumenda, voluptatem perferendis eius ea repudiandae earum sunt temporibus, repellendus
+        debitis similique, cumque impedit tenetur?</p>
 </body>
+
 </html>
