--- a/Day2/index.html
+++ b/Day2/index.html
@@ -19,7 +19,8 @@
     <br>
     <br>
     <br>
-    <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam asperiores dolores adipisci rerum aliquam sed
+    <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam asperiores dolores
+        adipisci rerum aliquam sed
         officia explicabo eum, atque exercitationem. Commodi, minima magnam iste libero quidem similique voluptas
         temporibus consectetur id veniam nobis nostrum sequi at saepe incidunt ut sit veritatis culpa molestiae rerum
         adipisci qui quaerat quam aspernatur. Unde ad tenetur alias earum veritatis aspernatur maiores, possimus
@@ -33,7 +34,8 @@
         animi dolorum reprehenderit laudantium dolores unde non saepe voluptate molestias, tenetur cum accusamus
         voluptates inventore eum adipisci officiis a. Ad amet voluptatum, vero excepturi sed omnis error dolores
         recusandae aliquam ullam. Quam aliquam id ullam repellendus in, laudantium facilis asperiores!</p>
-    <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, nam ratione explicabo, soluta consequuntur
+    <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, nam ratione
+        explicabo, soluta consequuntur
         repellat illo reprehenderit dolore atque veniam voluptatem ipsam est a, tempora vero quis! Ipsam perspiciatis
         expedita veritatis minus excepturi facere numquam eligendi officia, facilis possimus aperiam. Cumque alias
         voluptatum, modi consectetur id aliquam quae beatae tenetur quidem autem veniam? Beatae asperiores expedita odio
@@ -48,6 +50,13 @@
         recusandae pariatur, est eum iure consectetur ducimus, sed fuga facilis, sequi ipsa perspiciatis. Distinctio
         corrupti quod error ad assumenda, voluptatem perferendis eius ea repudiandae earum sunt temporibus, repellendus
         debitis similique, cumque impedit tenetur?</p>
+    <p style="font-family: cursive;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae consequuntur eius debitis odit doloremque
+        rerum inventore alias quia minima, obcaecati voluptatibus amet eum fugiat, repellat maiores quasi soluta illo
+        ullam. Vitae delectus reprehenderit nemo assumenda debitis animi accusamus libero, dolorum rem iusto vel tenetur
+        labore corporis eligendi adipisci soluta officiis eum! Fugiat dolores reiciendis, quis saepe ut itaque cum ea
+        quae numquam totam, veniam accusamus perferendis voluptate voluptas placeat aut aspernatur sunt! Eos voluptates
+        maiores, ut, neque accusantium iste aut quam blanditiis repellat ea rem perspiciatis aliquam nesciunt omnis
+        dolores unde consequatur voluptate. Omnis sunt cumque suscipit fugit, fugiat unde.</p>
 </body>
 
 </html>
