--- a/Day2/box-style.html
+++ b/Day2/box-style.html
@@ -13,6 +13,20 @@
     <b style="background-color: coral;">This is an inline. I am bold tag.</b>
     <b style="background-color: coral; display: block;">This is now a block element. I am bold tag.</b>
     <b style="background-color: coral; display: inline-block;">This is now a inline-block element. I am bold tag.</b>
-
+    <br>
+    <br>
+    <br>
+    <div style="display: flex; justify-content: space-between; align-items: center; background-color: lightblue;">
+        <div style="height: 100px; width: 100px; background-color: red;"></div>
+        <div style="height: 100px; width: 100px; background-color: green;"></div>
+        <div style="height: 100px; width: 100px; background-color: blue;"></div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div style="height: 600px; width: 700px; border: 5px solid black; background-color: gainsboro; padding-left: 50px; padding-top: 50px; margin-top: 100px;">
+        <div style="height: 300px; width: 300px; border: 1px solid red; background-color: gray;"></div>
+    </div>
+    <!-- top right bottom left -->
 </body>
 </html>
