--- a/Day 3/index.html
+++ b/Day 3/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div style="height: 400px; width: 400px; border: 1px solid red;"></div>
 </body>
 </html>
