--- a/Day 3/index.html
+++ b/Day 3/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <div style="height: 400px; width: 400px; border: 1px solid red;"></div>
+    <div style="height: 400px; width: 400px; border: 1px solid red;"></div>
 </body>
 </html>
