--- a/Day 3/index.html
+++ b/Day 3/index.html
@@ -9,5 +9,6 @@
     <div style="height: 400px; width: 400px; border: 1px solid red;"></div>
     <div style="height: 400px; width: 400px; border: 1px solid red;"></div>
     <div style="height: 400px; width: 400px; border: 1px solid red;"></div>
+    <div style="height: 400px; width: 400px; border: 1px solid red;"></div>
 </body>
 </html>
