--- a/Day4/index.html
+++ b/Day4/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div style="height: 400px; width: 400px; border: 1px solid red;"></div>
+
 </body>
 </html>
