--- a/Day4/index.html
+++ b/Day4/index.html
@@ -9,6 +9,8 @@
     <div style="height: 400px; width: 400px; border: 1px solid red;"></div>
     <div style="height: 400px; width: 400px; border: 1px solid red;"></div>
     <div style="height: 400px; width: 400px; border: 1px solid red;"></div>
-
+    <div style="height: 400px; width: 400px; border: 1px solid red;"></div>
+    <div style="height: 400px; width: 400px; border: 1px solid red;"></div>
+    <div style="height: 400px; width: 400px; border: 1px solid red;"></div>
 </body>
 </html>
